[tool.poetry]
name = "data_vizzing"
version = "0.1.0"
description = ""
authors = ["Bradford Johnson <hbird.johnson@gmail.com>"]
readme = "README.md"
packages = [{include = "data_vizzing"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pandas = "^2.2.3"
numpy = "^2.2.0"
pytest = "^8.3.4"
meteostat = "^1.6.8"
mplcyberpunk = "^0.7.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
